--- a/JContractInspector/src/jcontractinspector/Form.fxml
+++ b/JContractInspector/src/jcontractinspector/Form.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="800.0" prefWidth="1000.0" stylesheets="@form.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jcontractinspector.FormCtlr">
+<VBox prefHeight="800.0" prefWidth="1200.0" stylesheets="@form.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jcontractinspector.FormCtlr">
    <children>
       <HBox fx:id="topHBox" alignment="CENTER_LEFT" spacing="5.0" styleClass="hbox-top">
          <children>
@@ -46,7 +46,7 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <SplitPane dividerPositions="0.26706827309236947" layoutX="24.0" layoutY="18.0" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <SplitPane dividerPositions="0.20066889632107024" layoutX="24.0" layoutY="18.0" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <items>
                       <AnchorPane minHeight="0.0" minWidth="0.0">
                            <children>
@@ -60,7 +60,7 @@
                                                 <HBox>
                                                    <children>
                                                       <Label minWidth="125.0" prefWidth="125.0" text="Contract Id" wrapText="true" />
-                                                      <TextField fx:id="txtContractId" minWidth="20.0" text="0" HBox.hgrow="ALWAYS">
+                                                      <TextField fx:id="txtContractId" minWidth="20.0" HBox.hgrow="ALWAYS">
                                                          <font>
                                                             <Font size="12.0" />
                                                          </font>
