--- a/JContractInspector/src/jcontractinspector/form.css
+++ b/JContractInspector/src/jcontractinspector/form.css
@@ -42,3 +42,14 @@
     -fx-padding: 0 0.20em 0 0.20em; /* 0 3 0 3 */
     -fx-color : derive(-bg, -20%);
 }
+
+.tooltip {
+    -fx-font-size: 12;
+}
+
+.table-view .column-header .label {
+    -fx-font-size: 12;
+    -fx-font-weight: normal;
+    -fx-wrap-text: true;
+    -fx-text-alignment: center;
+}
